Easy spaces/main/default/objects/Interview__c/fields/Flexibility__c.field-meta.xml
<CustomField>
    <fullName>Flexibility__c</fullName>
    <label>Flexibility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>