Easy spaces/main/default/objects/Interview__c/fields/Interview_mode__c.field-meta.xml
<CustomField>
    <fullName>Interview_mode__c</fullName>
    <label>Interview mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>F2F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>