Easy spaces/main/default/objects/Interview__c/fields/Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating__c</fullName>
    <label>Overall Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Onhold</fullName>
            </value>
            <value>
                <fullName>Noshow</fullName>
            </value>
            <value>
                <fullName>Promoted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>