Easy spaces/main/default/objects/Interview__c/fields/Round__c.field-meta.xml
<CustomField>
    <fullName>Round__c</fullName>
    <label>Round</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Round</fullName>
                <default>true</default>
                <label>1st Round</label>
            </value>
            <value>
                <fullName>2nd Round</fullName>
            </value>
            <value>
                <fullName>3rd Round</fullName>
            </value>
            <value>
                <fullName>HR Round</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>