Easy spaces/main/default/objects/Interview__c/fields/Technical_Skills__c.field-meta.xml
<CustomField>
    <fullName>Technical_Skills__c</fullName>
    <label>Technical Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>